--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@uiw/react-md-editor": "^3.9.5",
     "axios": "^0.24.0",
     "date-fns": "^2.28.0",
     "markdown-to-jsx": "^7.1.5",
